<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GetStartActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="172dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_splash_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/RoundedImageView" />

    <TextView
        android:id="@+id/get_only_crtf_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="45dp"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/jost_bold"
        android:gravity="center"
        android:text="@string/welcome_to_e_learning"
        android:textColor="#202244"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shapeableImageView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mulish_regular"
        android:gravity="center"
        android:text="@string/explore_and_enhance_your_skills_with_our_courses"
        android:textColor="#545454"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/get_only_crtf_id" />

    <RelativeLayout
        android:id="@+id/getStartedBtnId"
        android:layout_width="175dp"
        android:layout_height="45dp"
        android:background="@drawable/round_button_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.157">

        <TextView
            android:id="@+id/leftText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:text="@string/get_started"
            android:textSize="18sp"
            android:fontFamily="@font/jost_bold"
            android:textStyle="bold"
            android:textColor="#FFFFFF" />


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <ImageView
                android:id="@+id/arrowImage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_arrow"
                app:tint="#0000FF" />
        </androidx.cardview.widget.CardView>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
